feat: endpoint runs (NOT WORKING YET)