@@ -1,19 +1,18 @@
 package com.api.social_meli.repository.impl;
 
 import com.api.social_meli.model.Identifiable;
-import org.springframework.context.annotation.Bean;
 import org.springframework.stereotype.Repository;
 
 import java.util.ArrayList;
 import java.util.List;
 
-
+@Repository
 public class BaseRepository<T extends Identifiable>{
-    private List<T> entities = new ArrayList<>();
+    protected List<T> entities = new ArrayList<>();
 
     public T create(T entity) {
         entities.add(entity);
-        return entities.getLast();
+        return entities.get(entities.size()-1); //Nota a pull review: Reemplazar .getLast por esto
     }
 
     public T findById(int id) {
